localization/v3.0.x/site/es/reference/sys_config/configure_metastore.md
---
id: configure_metastore.md
related_key: configure
group: system_configuration.md
summary: Aprenda a configurar metastore para Milvus.
---
<h1 id="metastore-related-Configurations" class="common-anchor-header">Configuraciones relacionadas con metastore<button data-href="#metastore-related-Configurations" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><h2 id="metastoretype" class="common-anchor-header"><code translate="no">metastore.type</code><button data-href="#metastoretype" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="metastore.type">
  <thead>
    <tr>
      <th class="width80">Descripción</th>
      <th class="width20">Valor por defecto</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Valor por defecto: etcd, Valores válidos: [etcd, tikv]     </td>
      <td>etcd</td>
    </tr>
  </tbody>
</table>
<h2 id="metastoresnapshotttl" class="common-anchor-header"><code translate="no">metastore.snapshot.ttl</code><button data-href="#metastoresnapshotttl" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="metastore.snapshot.ttl">
  <thead>
    <tr>
      <th class="width80">Descripción</th>
      <th class="width20">Valor por defecto</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        snapshot ttl en segundos      </td>
      <td>86400</td>
    </tr>
  </tbody>
</table>
<h2 id="metastoresnapshotreserveTime" class="common-anchor-header"><code translate="no">metastore.snapshot.reserveTime</code><button data-href="#metastoresnapshotreserveTime" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="metastore.snapshot.reserveTime">
  <thead>
    <tr>
      <th class="width80">Descripción</th>
      <th class="width20">Valor por defecto</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        tiempo de reserva de la instantánea en segundos      </td>
      <td>3600</td>
    </tr>
  </tbody>
</table>
